Fix spacing #2

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -53,6 +53,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 #primary {
   padding: 140px 0 72px 0;
 }
+#primary .page-head {
+  margin-bottom: 40px;
+}
+#primary .entry-content, #primary .entry-summary, #primary .page-content {
+  margin: 0;
+}
 #primary.insights {
   overflow: hidden;
 }
